<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_padding"
        tools:context=".MainActivity">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:text="@string/help_text" />

        <RelativeLayout
            android:background="@drawable/result_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_result"
            android:layout_marginBottom="@dimen/margin_result"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/button_copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_copy_black_24dp"
                android:padding="@dimen/copy_button_padding"
                android:layout_alignParentRight="true" />

            <TextView
                android:id="@+id/result_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/button_copy"
                android:layout_alignBottom="@id/button_copy"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/button_copy"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:singleLine="true"
                android:textAlignment="center"
                android:textAppearance="@style/ResultTextAppearance"
                tools:text="qQwWeE" />

            <ImageView
                android:id="@+id/quality"
                android:layout_width="@dimen/indicator_width"
                android:layout_height="@dimen/indicator_height"
                android:src="@drawable/quality_indicator"
                android:layout_below="@id/result_text"
                android:layout_alignParentRight="true" />

            <TextView
                android:id="@+id/quality_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/quality"
                android:layout_alignTop="@+id/quality"
                android:layout_alignBottom="@+id/quality"
                android:gravity="center_vertical"
                android:text="@string/quality_hint" />

        </RelativeLayout>

        <EditText
            android:id="@+id/source_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_hint" />


        <TextView
            android:paddingTop="@dimen/padding_plain_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:text="@string/generate_password_text" />

        <CheckBox
            android:id="@+id/check_uppercase"
            android:layout_width="match_parent"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:layout_height="wrap_content"
            android:text="@string/check_uppercase" />

        <CheckBox
            android:id="@+id/check_digits"
            android:layout_width="match_parent"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:layout_height="wrap_content"
            android:text="@string/check_digits" />

        <CheckBox
            android:id="@+id/check_symbols"
            android:layout_width="match_parent"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:layout_height="wrap_content"
            android:text="@string/symbols" />

        <SeekBar
            android:id="@+id/password_length"
            android:padding="@dimen/seek_bar_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_length" />

            <TextView
                android:id="@+id/additional_symbol_amount"
                android:paddingStart="@dimen/padding_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero_symbols"
                tools:text="0 символов" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/padding_text"
                android:text="@string/equals_sign"
                tools:text="=" />

            <TextView
                android:id="@+id/general_quantity"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/padding_text"
                android:text="@string/eight_symbols"
                tools:text="8 символов" />

        </LinearLayout>

        <RelativeLayout
            android:background="@drawable/result_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_result"
            android:layout_marginBottom="@dimen/margin_result"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/button_copy_generated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_copy_black_24dp"
                android:padding="@dimen/copy_button_padding"
                android:layout_alignParentRight="true" />

            <TextView
                android:id="@+id/generated_password_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/button_copy_generated"
                android:layout_alignBottom="@id/button_copy_generated"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/button_copy_generated"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:gravity="center"
                android:textAlignment="gravity"
                android:textAppearance="@style/ResultTextAppearance" />

        </RelativeLayout>

        <Button
            android:padding="@dimen/activity_padding"
            android:id="@+id/button_generate_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_generate_password"/>

    </LinearLayout>
</ScrollView>
